--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en" class="no-js ">
 	<head id="Head1">
@@ -16,7 +17,7 @@ if (bonaPage_InternalPageType && (bonaPage_InternalPageType.isSystemPage || bona
 try { function waMetricsGlobalHandler(args) { if (WA.topWindow.waMetricsOuterGlobalHandler && typeof(WA.topWindow.waMetricsOuterGlobalHandler) === 'function') { WA.topWindow.waMetricsOuterGlobalHandler(args); }}} catch(err) {}
  try { if (parent && parent.BonaPage) parent.BonaPage.implementBonaPage(window); } catch (err) { }
 try { document.write('<style type="text/css"> .WaHideIfJSEnabled, .HideIfJSEnabled { display: none; } </style>'); } catch(err) {}
-var bonaPage_WebPackRootPath = '//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/public/react/';</script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/shared/bonapagetop/bonapagetop-compiled.js" id="idBonaPageTop"></script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/public/react/index-dc2aacc.js" id="ReactPublicJs"></script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/shared/ui/shared-ui-compiled.js" id="idSharedJs"></script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/General.js" id=""></script><script type="text/javascript" language="javascript" src="https://sf.wildapricot.org/BuiltTheme/casefile_lawsuit.v3.0/current/0353fba0/scripts/combined.js" id=""></script><title>Home</title>
+var bonaPage_WebPackRootPath = '//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/public/react/';</script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/shared/bonapagetop/bonapagetop-compiled.js" id="idBonaPageTop"></script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/public/react/index-dc2aacc.js" id="ReactPublicJs"></script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/scripts/shared/ui/shared-ui-compiled.js" id="idSharedJs"></script><script type="text/javascript" language="javascript" src="//sf.wildapricot.org/WebUI/built7.20.0.17200/General.js" id=""></script><script type="text/javascript" language="javascript" src="https://sf.wildapricot.org/BuiltTheme/casefile_lawsuit.v3.0/current/0353fba0/scripts/combined.js" id=""></script><title>Home | Black's Inc.</title>
 </head>
 	<body id="PAGEID_1075164" class="publicContentView waTopImage LayoutMain">
 <div class="mLayout layoutMain" id="mLayout">
@@ -501,7 +502,7 @@ s0.parentNode.insertBefore(s1,s0);
 </div></div>
 			<div class="zonePlace zoneFooter3">
 <div id="id_Footer2" data-componentId="Footer2" class="WaPlaceHolder WaPlaceHolderFooter2" style="background-color:#222222;"><div style="padding-top:24px;padding-bottom:40px;"><div id="id_1kQDrLi" class="WaGadgetOnly WaGadgetHeadline  gadgetStyleNone" style="" data-componentId="1kQDrLi" ><div class="gadgetStyleBody gadgetContentEditableArea" style="" data-editableArea="0" data-areaHeight="auto">
-<p align="center"><font color="#ffffff">© The Black's Inc. Group 2020</font></p></div>
+<p align="center"><font color="#ffffff">© The Black's Inc. Group 2021</font></p></div>
 </div></div>
 </div></div>
 
